--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Page In Progress
+Welcome to Nikhil Aravindakshan's developer space. Currently, projects are in progress and not in publishable shape.
+Stay tuned for updates.....
